--- a/trackr-app/app/src/main/AndroidManifest.xml
+++ b/trackr-app/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.Trackrapp">
         <activity
-                android:name=".ui.main.MainActivity"
+                android:name=".MainActivity"
                 android:exported="true"
                 android:label="@string/app_name"
                 android:theme="@style/Theme.Trackrapp.NoActionBar">
