Create initial notification classes
MainActivity contains some code to show the notification works (takes a couple seconds to show up on the emulator).

--- a/trackr-app/app/src/main/AndroidManifest.xml
+++ b/trackr-app/app/src/main/AndroidManifest.xml
@@ -20,6 +20,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".notification.EventBroadcastReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.inent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
