--- a/trackr-app/app/build.gradle
+++ b/trackr-app/app/build.gradle
@@ -1,7 +1,11 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
+
+apply plugin: 'com.android.application'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdk 31
@@ -95,4 +99,8 @@ dependencies {
     // Hilt for dependency injection
     implementation 'com.google.dagger:hilt-android:2.40'
     kapt 'com.google.dagger:hilt-compiler:2.40'
+}
+
+kapt {
+    correctErrorTypes true
 }
