--- a/trackr-app/app/src/main/AndroidManifest.xml
+++ b/trackr-app/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
             android:theme="@style/Theme.Trackrapp">
         <activity
                 android:name=".MainActivity"
+                android:screenOrientation="portrait"
                 android:exported="true"
                 android:label="@string/app_name"
                 android:theme="@style/Theme.Trackrapp.NoActionBar">
