--- a/trackr-app/app/build.gradle
+++ b/trackr-app/app/build.gradle
@@ -99,8 +99,9 @@ dependencies {
     implementation("androidx.room:room-paging:2.4.0-beta01")
 
     // Hilt for dependency injection
-    implementation 'com.google.dagger:hilt-android:2.40'
-    kapt 'com.google.dagger:hilt-compiler:2.40'
+    implementation 'com.google.dagger:hilt-android:2.40.1'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha03'
+    kapt 'com.google.dagger:hilt-compiler:2.40.1'
 }
 
 kapt {
