--- a/trackr-app/app/src/main/AndroidManifest.xml
+++ b/trackr-app/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="com.trackr.trackr_app">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application
             android:name=".TrackrApp"
             android:allowBackup="true"
@@ -26,7 +27,7 @@
         <receiver android:name=".notification.EventBroadcastReceiver"
             android:exported="false">
             <intent-filter>
-                <action android:name="android.inent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
