--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,6 +23,9 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
+      working-directory: 'trackr-app'
       run: chmod +x gradlew
+      
     - name: Build with Gradle
+      working-directory: 'trackr-app'
       run: ./gradlew build
