added tests to workflow

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,3 +29,15 @@ jobs:
     - name: Build with Gradle
       working-directory: 'trackr-app'
       run: ./gradlew build
+      
+  android_tests:
+    runs-on: [ macos-latest ]
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Instrumentation Tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 26
+          script: ./gradlew connectedAndroidTest
+          working-directory: 'trackr-app'
