--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,7 +10,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -31,6 +30,7 @@ jobs:
       run: ./gradlew build
       
   android_tests:
+    needs: build
     runs-on: [ macos-latest ]
     steps:
       - uses: actions/checkout@v2
