--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,10 +34,14 @@ jobs:
     runs-on: [ macos-latest ]
     steps:
       - uses: actions/checkout@v2
-
+      
+      - name: Grant execute permission for gradlew
+        working-directory: 'trackr-app'
+        run: chmod +x gradlew
+      
       - name: Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 26
-          script: ./gradlew connectedAndroidTest
+          script: ./gradlew connectedCheck --stacktrace
           working-directory: 'trackr-app'
